--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Webstudio</title>
   </head>
   <body>
     <!--Шапка-->
-    <header class="header">
-      <nav class="navigation">
+        <header class="header">
+       <div class="container header-container">
+          <nav class="navigation">
         <a class="logo link" href="./index.html" lang="en">
           <span class="logo-item">Web</span>Studio</a
         >
@@ -26,18 +28,24 @@
         </ul>
       </nav>
       <ul class="list">
-        <li><a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="contact link" href="tel+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </header>
+       </div>
+      </header>
+     
     <!--Hero-->
     <main>
-      <section class="hero">
-        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+        <section class="hero">
+       <div class="container">
+          <h1 class="title">Эффективные решения <br> для вашего бизнеса</h1>
         <button class="modal-btn" type="button">Заказать услугу</button>
+       </div>
       </section>
+     
       <!-- <h2>Наши преимущества</h2>-->
-      <section>
+     <div class="container">
+        <section>
         <ul class="list">
           <li>
             <h3 class="about-us">Внимание к деталям</h3>
@@ -65,8 +73,10 @@
           </li>
         </ul>
       </section>
+     </div>
       <!--Чем мы занимаемся-->
-      <section>
+      <div class="container">
+        <section>
         <h2 class="subtitle">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
@@ -98,8 +108,10 @@
           </li>
         </ul>
       </section>
+      </div>
       <!--Наша команда-->
-      <section>
+      <div class="container">
+        <section>
         <h2 class="subtitle">Наша команда</h2>
         <ul class="list">
           <li>
@@ -149,6 +161,7 @@
           </li>
         </ul>
       </section>
+      </div>
     </main>
     <!--Подвал-->
     <footer class="footer">
