--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Webstudio</title>
   </head>
   <body>
     <!--Шапка-->
     <header class="header">
-      <nav class="navigation">
+     <div class="container">
+        <nav class="navigation">
         <a class="logo link" href="./index.html" lang="en">
           <span class="logo-item">Web</span>Studio</a
         >
@@ -29,10 +31,12 @@
         <li><a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="contact link" href="tel+380961111111">+38 096 111 11 11</a></li>
       </ul>
+     </div>
     </header>
     <!--<h1>Портфолио</h1>  -->
     <main>
-      <section>
+      <div class="container">
+        <section>
         <ul class="list">
           <li>
             <button class="menu-btn" type="button">Все</button>
@@ -154,6 +158,7 @@
           </li>
         </ul>
       </section>
+      </div>
     </main>
     <!--Подвал-->
     <footer class="footer">
