--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <span class="logo-item">Web</span>Studio</a
         >
         <ul class="list">
-          <li><a class="nav-link link" href="#">Студия</a></li>
-          <li><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-link link" href="#">Конакты</a></li>
+          <li class="nav-item"><a class="nav-link link" href="#">Студия</a></li>
+          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link link" href="#">Конакты</a></li>
         </ul>
       </nav>
       <ul class="list">
@@ -44,28 +44,28 @@
       </section>
      
       <!-- <h2>Наши преимущества</h2>-->
-        <section class="section" >
+        <section class="section">
         <div class="container">
           <ul class="about-list list">
-          <li  class="advantages"  >
+          <li  class="advantages">
             <h3 class="about-us">Внимание к деталям</h3>
             <p class="about-us-desc">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li class="advantages" >
+          <li class="advantages">
             <h3 class="about-us">Пунктуальность</h3>
             <p class="about-us-desc">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="advantages" >
+          <li class="advantages">
             <h3 class="about-us">Планирование</h3>
             <p class="about-us-desc">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="advantages" >
+          <li class="advantages">
             <h3 class="about-us">Современные технологии</h3>
             <p class="about-us-desc">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -168,14 +168,16 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <!--Логотип компании-->
+    <section class="section">
+    <div class="container">
+         <!--Логотип компании-->
 
       <a class="logo-footer link" href="#" lang="en"> <span class="logo-item">Web</span>Studio</a>
 
       <!--Контактные данные-->
 
-      <ul class="list">
-        <li>
+      <ul class="footer-contact">
+        <li class="footer-item">
           <a
             class="contact-info-address link"
             href="https://goo.gl/maps/qAfCvyjsyysp9pY69"
@@ -184,13 +186,17 @@
             >г. Киев, пр-т Леси Украинки, 26</a
           >
         </li>
-        <li>
+        <li class="footer-item">
           <a class="contact-info-mail link" href="mailto:info@example.com">info@example.com</a>
         </li>
-        <li>
+        <li class="footer-item">
           <a class="contact-info-phone link" href="tel:+380991111111">+38 099 111 11 11</a>
         </li>
       </ul>
+    </div>
+
+
+    </section>
     </footer>
   </body>
 </html>
