--- a/portfolio.html
+++ b/portfolio.html
@@ -9,46 +9,46 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Webstudio</title>
   </head>
   <body>
     <!--Шапка-->
     <header class="header">
-     <div class="container">
-        <nav class="navigation">
+     <div class="container header-container">
+          <nav class="navigation">
         <a class="logo link" href="./index.html" lang="en">
           <span class="logo-item">Web</span>Studio</a
         >
         <ul class="list">
-          <li><a class="nav-link link" href="./index.html">Студия</a></li>
-          <li><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="nav-link link" href="#">Конакты</a></li>
+          <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link link" href="#">Конакты</a></li>
         </ul>
       </nav>
       <ul class="list">
-        <li><a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a class="contact link" href="tel+380961111111">+38 096 111 11 11</a></li>
       </ul>
-     </div>
+       </div>
     </header>
     <!--<h1>Портфолио</h1>  -->
     <main>
       <div class="container">
         <section>
-        <ul class="list">
-          <li>
+        <ul class="filter-btn list">
+          <li class="btn-item" >
             <button class="menu-btn" type="button">Все</button>
           </li>
-          <li><button class="menu-btn" type="button">Веб-сайты</button></li>
-          <li><button class="menu-btn" type="button">Приложения</button></li>
-          <li><button class="menu-btn" type="button">Дизайн</button></li>
-          <li><button class="menu-btn" type="button">Маркетинг</button></li>
+          <li class="btn-item"><button class="menu-btn" type="button">Веб-сайты</button></li>
+          <li class="btn-item"><button class="menu-btn" type="button">Приложения</button></li>
+          <li class="btn-item"><button class="menu-btn" type="button">Дизайн</button></li>
+          <li class="btn-item"><button class="menu-btn" type="button">Маркетинг</button></li>
         </ul>
         <!--  <h2>Наши работы</h2> -->
-        <ul class="list">
-          <li>
+        <ul class="project-item list">
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/tecnokryak.jpg"
@@ -60,7 +60,7 @@
               <p class="project-type">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/poster-neworlean-goldestar.jpg"
@@ -72,7 +72,7 @@
               <p class="project-type">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/the-seafood-restaurant.jpg"
@@ -84,7 +84,7 @@
               <p class="project-type">Приложение</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/prime-project.jpg"
@@ -96,7 +96,7 @@
               <p class="project-type">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/boxes-project.jpg"
@@ -108,7 +108,7 @@
               <p class="project-type">Приложение</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/inspiration.jpg"
@@ -120,7 +120,7 @@
               <p class="project-type">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/limited-edition.jpg"
@@ -132,7 +132,7 @@
               <p class="project-type">Дизайн</p></a
             >
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/lab-project.jpg"
@@ -144,7 +144,7 @@
               <p class="project-type">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="project-desc">
             <a class="link" href="#">
               <img
                 src="./images/portfolio/growing-business.jpg"
@@ -162,14 +162,16 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <!--Логотип компании-->
+      <section class="section">
+    <div class="container">
+         <!--Логотип компании-->
 
       <a class="logo-footer link" href="#" lang="en"> <span class="logo-item">Web</span>Studio</a>
 
       <!--Контактные данные-->
 
-      <ul class="list">
-        <li>
+      <ul class="footer-contact">
+        <li class="footer-item">
           <a
             class="contact-info-address link"
             href="https://goo.gl/maps/qAfCvyjsyysp9pY69"
@@ -178,13 +180,15 @@
             >г. Киев, пр-т Леси Украинки, 26</a
           >
         </li>
-        <li>
+        <li class="footer-item">
           <a class="contact-info-mail link" href="mailto:info@example.com">info@example.com</a>
         </li>
-        <li>
+        <li class="footer-item">
           <a class="contact-info-phone link" href="tel:+380991111111">+38 099 111 11 11</a>
         </li>
       </ul>
+    </div>
+    </section>
     </footer>
   </body>
 </html>
