--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
           >
           <ul class="list">
             <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
-            <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-item">
+              <a class="nav-link link current" href="./portfolio.html">Портфолио</a>
+            </li>
             <li class="nav-item"><a class="nav-link link" href="#">Конакты</a></li>
           </ul>
         </nav>
@@ -41,10 +43,11 @@
         </ul>
       </div>
     </header>
-    <!--<h1>Портфолио</h1>  -->
+    <!-- <h1>Портфолио</h1>  -->
     <main>
       <div class="container">
         <section>
+          <h1 class="visually-hidden">Portfolio</h1>
           <ul class="filter-btn list">
             <li class="btn-item">
               <button class="menu-btn" type="button">Все</button>
@@ -64,8 +67,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Технокряк</h3>
-                <p class="project-type">Веб-сайт</p>
+                <div class="project-profile">
+                  <h3 class="project">Технокряк</h3>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="project-desc">
@@ -76,8 +81,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                <p class="project-type">Дизайн</p>
+                <div class="project-profile">
+                  <h3 class="project">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                  <p class="project-type">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="project-desc">
@@ -88,8 +95,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Ресторан <span lang="en">Seafood</span></h3>
-                <p class="project-type">Приложение</p>
+                <div class="project-profile">
+                  <h3 class="project">Ресторан <span lang="en">Seafood</span></h3>
+                  <p class="project-type">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="project-desc">
@@ -100,8 +109,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Проект <span lang="en">Prime</span></h3>
-                <p class="project-type">Маркетинг</p>
+                <div class="project-profile">
+                  <h3 class="project">Проект <span lang="en">Prime</span></h3>
+                  <p class="project-type">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="project-desc">
@@ -112,8 +123,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Проект <span lang="en">Boxes</span> Boxes</h3>
-                <p class="project-type">Приложение</p>
+                <div class="project-profile">
+                  <h3 class="project">Проект <span lang="en">Boxes</span> Boxes</h3>
+                  <p class="project-type">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="project-desc">
@@ -124,8 +137,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project"><span lang="en">Inspiration has no Borders</span></h3>
-                <p class="project-type">Веб-сайт</p>
+                <div class="project-profile">
+                  <h3 class="project"><span lang="en">Inspiration has no Borders</span></h3>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="project-desc project-border">
@@ -136,8 +151,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Издание <span lang="en">Limited Edition</span></h3>
-                <p class="project-type">Дизайн</p></a
+                <div class="project-profile">
+                  <h3 class="project">Издание <span lang="en">Limited Edition</span></h3>
+                  <p class="project-type">Дизайн</p>
+                </div></a
               >
             </li>
             <li class="project-desc project-border">
@@ -148,8 +165,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project">Проект <span lang="en">LAB</span></h3>
-                <p class="project-type">Маркетинг</p>
+                <div class="project-profile">
+                  <h3 class="project">Проект <span lang="en">LAB</span></h3>
+                  <p class="project-type">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="project-desc project-border">
@@ -160,8 +179,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="project"><span lang="en">Growing Business</span></h3>
-                <p class="project-type">Приложение</p>
+                <div class="project-profile">
+                  <h3 class="project"><span lang="en">Growing Business</span></h3>
+                  <p class="project-type">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
