--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="logo-item">Web</span>Studio</a
           >
           <ul class="list">
-            <li class="nav-item"><a class="nav-link link" href="#">Студия</a></li>
+            <li class="nav-item"><a class="nav-link link current" href="#">Студия</a></li>
             <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
             <li class="nav-item"><a class="nav-link link" href="#">Конакты</a></li>
           </ul>
@@ -46,10 +46,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
+          <h1 class="title">Эффективные решения для вашего бизнеса</h1>
           <button class="modal-btn" type="button">Заказать услугу</button>
         </div>
       </section>
@@ -88,7 +85,7 @@
 
       <!--Чем мы занимаемся-->
       <div class="container">
-        <section class="section">
+        <section class="what-we-do-section section">
           <h2 class="subtitle">Чем мы занимаемся</h2>
           <ul class="our-work list">
             <li class="work-img">
@@ -134,8 +131,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle-photo-name">Игорь Демьяненко</h3>
-              <p class="position" lang="en">Product Designer</p>
+              <div class="team-profile">
+                <h3 class="subtitle-photo-name">Игорь Демьяненко</h3>
+                <p class="position" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-desc">
               <img
@@ -145,8 +144,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle-photo-name">Ольга Репина</h3>
-              <p class="position" lang="en">Frontend Developer</p>
+              <div class="team-profile">
+                <h3 class="subtitle-photo-name">Ольга Репина</h3>
+                <p class="position" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-desc">
               <img
@@ -156,8 +157,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle-photo-name">Николай Тарасов</h3>
-              <p class="position" lang="en">Marketing</p>
+              <div class="team-profile">
+                <h3 class="subtitle-photo-name">Николай Тарасов</h3>
+                <p class="position" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-desc">
               <img
@@ -168,8 +171,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle-photo-name">Михаил Ермаков</h3>
-              <p class="position" lang="en">UI Designer</p>
+              <div class="team-profile">
+                <h3 class="subtitle-photo-name">Михаил Ермаков</h3>
+                <p class="position" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
