--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
       </section>
 
       <!--Чем мы занимаемся-->
-      <div class="container">
-        <section class="what-we-do-section section">
+
+      <section class="what-we-do section">
+        <div class="container">
           <h2 class="subtitle">Чем мы занимаемся</h2>
           <ul class="our-work list">
             <li class="work-img">
@@ -116,10 +117,11 @@
               />
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
+
       <!--Наша команда-->
-      <section class="section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="subtitle">Наша команда</h2>
           <ul class="our-team-list list">
