--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
           </ul>
         </nav>
         <ul class="list">
-          <li>
+          <li class="contact-header">
             <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contact link" href="tel+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-header">
+            <a class="contact link" href="tel+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -184,7 +186,7 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <section class="section">
+      <section class="footer-section">
         <div class="container">
           <!--Логотип компании-->
           <a class="logo-footer link" href="#" lang="en">
