--- a/portfolio.html
+++ b/portfolio.html
@@ -36,10 +36,12 @@
           </ul>
         </nav>
         <ul class="list">
-          <li>
+          <li class="contact-header">
             <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contact link" href="tel+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-header">
+            <a class="contact link" href="tel+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -60,7 +62,7 @@
           <!--  <h2>Наши работы</h2> -->
           <ul class="project-item list">
             <li class="project-desc">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/tecnokryak.jpg"
                   alt="Проект Технокряк"
@@ -74,7 +76,7 @@
               </a>
             </li>
             <li class="project-desc">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/poster-neworlean-goldestar.jpg"
                   alt="Постер New Orlean vs Golden Star"
@@ -88,7 +90,7 @@
               </a>
             </li>
             <li class="project-desc">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/the-seafood-restaurant.jpg"
                   alt=" Постер ресторана Seafood"
@@ -102,7 +104,7 @@
               </a>
             </li>
             <li class="project-desc">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/prime-project.jpg"
                   alt="Наушники"
@@ -116,7 +118,7 @@
               </a>
             </li>
             <li class="project-desc">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/boxes-project.jpg"
                   alt="2 коробочки"
@@ -130,7 +132,7 @@
               </a>
             </li>
             <li class="project-desc">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/inspiration.jpg"
                   alt="Отображается сайт страницы Inspiration has no Borders"
@@ -144,7 +146,7 @@
               </a>
             </li>
             <li class="project-desc project-border">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/limited-edition.jpg"
                   alt="Издание Limited Edition"
@@ -158,7 +160,7 @@
               >
             </li>
             <li class="project-desc project-border">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/lab-project.jpg"
                   alt=" Постер проекта LAB"
@@ -172,7 +174,7 @@
               </a>
             </li>
             <li class="project-desc project-border">
-              <a class="link" href="#">
+              <a class="project-link link" href="#">
                 <img
                   src="./images/portfolio/growing-business.jpg"
                   alt="Отображается сайт страницы Growing Business"
@@ -191,7 +193,7 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <section class="section">
+      <section class="footer-section">
         <div class="container">
           <!--Логотип компании-->
           <a class="logo-footer link" href="#" lang="en">
